# YomisubAPI

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: DEVELOPER.md  conjugation_codes.html  developer.html  index.html
scripts/: check_meanings.py  check_sudachi.py  debug_potential.py  debug_ranuki.py  test_analyze_potentials.py  test_api.py  test_complex_analysis.py  test_comprehensive.py  test_conjugation.py  test_conjugation_perf.py  test_copula_phrases.py  test_godan_potential.py  test_grouping_boundaries.py  test_ichidan_potential.py  test_layer_forms.py  update_jmdict.sh
src/: __init__.py  main.py  models.py
src/services/: __init__.py  adjective.py  analysis.py  analyzer.py  conjugation.py  conjugation_legacy.py  jmdict.py  verb.py
src/services/conjugation/: __init__.py  data.py  helpers.py  phrases.py
src/static/: index.html  script.js  style.css
