[project]
name = "yomisub"
version = "0.1.0"
description = "A Japanese text analysis API for language learning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sub-Grabber" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sudachipy>=0.6.8",
    "sudachidict-full>=20251022",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "jaconv>=0.4.1",
    "lemminflect>=0.2.3",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
